--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -3,11 +3,22 @@
   padding-bottom: 64px;
 }
 
+.perspectiveDeco {
+  position: fixed;
+  top: 60%;
+  height: 40%;
+  width: 100%;
+  background-color: hsl(195deg, 20%, 86%);
+}
+
+
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +35,13 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 15%;
+  bottom: 0;
+  left: 55%;
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
 }
